[package]
name = "rdf"
version = "0.1.0"
authors = ["Iddan Aaronsohn <mail@aniddan.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "*"
websocket = "*"
tokio = "*"
openssl = "*"
futures = "*"
hyper = "0.12"
serde_qs = "*"
log = "0.4"
env_logger = "*"

[lib]
name = "rdf"
path = "src/lib.rs"

[[bin]]
name = "rdf-server"
path = "src/bin.rs"