[package]
name = "minerva"
version = "0.1.0"
authors = ["Iddan Aaronsohn <mail@aniddan.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "*"
tokio = "*"
openssl = "*"
futures = "*"
hyper = "0.12.33"
serde_qs = "*"
log = "0.4"
env_logger = "*"
http = "*"
uuid = { version = "0.7", features = ["v4"] }
petgraph = "*"

[lib]
name = "minerva"
path = "src/lib.rs"

[[bin]]
name = "minerva-server"
path = "src/bin.rs"